<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgroundfinal1"
    android:layout_height="match_parent"
    tools:context=".Adminlogin1">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"

            android:layout_height="180dp"
            android:layout_weight="1"
            android:contentDescription="@string/doctor_s_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/images" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:fontFamily="@font/acme"
            android:text="@string/admin_login"
            android:textColor="#0E0A0A"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/sign_in_to_continue"
            android:textAlignment="center"
            android:textColor="#8E24AA"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/username1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:layout_marginTop="28dp"
            android:background="#50ffffff"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/username"
            android:inputType="textWebEmailAddress|textEmailAddress"
            android:padding="20dp"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username1"
            android:layout_marginTop="16dp"
            android:background="#50ffffff"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:padding="20dp"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/username1"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/action_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password1" />

        <TextView
            android:id="@+id/Reg"
            android:layout_width="139dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="New User? Register"
            android:textColor="#100D0D"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goback" />

        <TextView
            android:id="@+id/goback"
            android:layout_width="73dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:onClick="Back1"
            android:text="@string/go_back"
            android:textColor="#100D0D"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>