<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundfinal1"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/MyHospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/acme"
        android:gravity="center"
        android:text="@string/my_hospital"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MyHospital"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#50ffffff"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginEmail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#50ffffff"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:padding="20dp"
        android:textColorHint="@color/black" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/black"
        android:text="@string/log_in"
        android:textColor="#FAF6F6" />


    <TextView
        android:id="@+id/newuser"
        android:layout_width="wrap_content"

        android:layout_height="48dp"
        android:layout_above="@+id/Adminlogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:gravity="center"
        android:onClick="OpenActivity"
        android:text="@string/new_user"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Adminlogin"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="49dp"
        android:clickable="true"
        android:onClick="Admingo"
        android:text="Admin Login"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </com.google.android.material.chip.ChipGroup>


</RelativeLayout>
